--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -16,11 +16,18 @@
 
       <xpath expr="//tr[@class='border-black o_total']/td[@class='text-end']/.." position="before">
           <strong>(menos 5)</strong>
-    </xpath>
+        </xpath>
 
 
         <xpath expr="//tr[@class='border-black o_total']/td[@class='text-end']/.." position="attributes">
             <attribute name="t-if">False</attribute>
+        </xpath>
+
+        <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="after">
+              <tr class="border-black o_total">
+                <td class="text-end">
+                  <strong>(-Lu-)</strong>
+                </td>
         </xpath>
 
 
