--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -38,6 +38,7 @@
                 <t t-call="account.tax_groups_totals"/>
             </t>
                
+                 <t t-set="has_rounding" t-value="'formatted_amount_total_rounded' in tax_totals"/>
 
 
               <tr class="border-black o_total">
