--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -38,7 +38,13 @@
                 <t t-call="account.tax_groups_totals"/>
             </t>
                
-                 <t t-set="has_rounding" t-value="'formatted_amount_total_rounded' in tax_totals"/>
+                
+            <t t-if="'formatted_rounding_amount' in tax_totals and tax_totals['rounding_amount'] != 0">
+                <td>Rounding</td>
+                <td class="text-end">
+                    <span t-esc="tax_totals['formatted_rounding_amount']"/>
+                </td>
+            </t>
 
 
               <tr class="border-black o_total">
