--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -34,14 +34,22 @@
 
         <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="after">
 
-                
-            <t t-if="'formatted_rounding_amount' in tax_totals and tax_totals['rounding_amount'] != 0">
-                <td>Rounding</td>
-                <td class="text-end">
-                    <span t-esc="tax_totals['formatted_rounding_amount']"/>
-                </td>
-            </t>
+        <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
+                <tr class="border-black o_subtotal">
+                    <td><strong t-esc="subtotal['name']"/></td>
 
+                    <td class="text-end">
+                        <span
+                            t-att-class="oe_subtotal_footer_separator"
+                            t-esc="subtotal['formatted_amount']"
+                        />
+                    </td>
+                </tr>
+
+                <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
+                <t t-call="account.tax_groups_totals"/>
+            </t>
+    
 
               <tr class="border-black o_total">
                     <td><strong>Total</strong></td>
