--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -3,13 +3,7 @@
      License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
 <odoo>
     <template id="negative_amounts_credit_note_reports_invoice_document" name="negative.amounts.credit.note.reports.invoice.document" inherit_id="account.document_tax_totals" >
-       
-<!--        
-         <xpath expr="//td[hasclass('text-end')]" position="after">
-              <strong>(++)</strong>
-        </xpath> -->
-
-              
+                     
          <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="before">
               <strong>(menos)</strong>
         </xpath>
@@ -26,22 +20,24 @@
 
 
         <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="after">
+            <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
+                
+                    <t t-set="subtotal_to_show"  t-value="subtotal['name']"/>
 
-        <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
-              <strong>(menos Lu)</strong>
-                <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
-                <t t-call="account.tax_groups_totals"/>
-            </t>
-    
+                    <strong>(menos Lu)</strong>
 
-              <tr class="border-black o_total">
+                    <t t-call="account.tax_groups_totals"/>
+                </t>
+        
+
+                <tr class="border-black o_total">
                     <td><strong>Total</strong></td>
                     <td class="text-end">
-                    <strong>(menos)</strong>
-                    <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
-                        <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
+                        <strong>(menos)</strong>
+                        <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
+                        <!-- <span t-esc="tax_totals['formatted_amount_total']" t-else=""/> -->
                     </td>
-            </tr> 
+                </tr> 
         </xpath>
 
 
