--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -20,16 +20,18 @@
 
 
         <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="after">
-           <!-- <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
-                
-                     <t t-set="subtotal_to_show"  t-value="subtotal['name']"/>
+                <tr class="border-black o_subtotal">
+                    <td><strong t-esc="subtotal['name']"/></td>
 
-             
-
-                   
-            </t>
-         -->
+                    <td class="text-end">
+                        <span
+                            t-att-class="oe_subtotal_footer_separator"
+                            t-esc="subtotal['formatted_amount']"
+                        />
+                    </td>
+                </tr>
                 <t t-call="account.tax_groups_totals"/>
+                
                 <tr class="border-black o_total">
                     <td><strong>Total</strong></td>
                     <td class="text-end">
