--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -20,6 +20,7 @@
 
 
         <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="after">
+         <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
                 <tr class="border-black o_subtotal">
                     <td><strong t-esc="subtotal['name']"/></td>
 
@@ -30,8 +31,10 @@
                         />
                     </td>
                 </tr>
+
+        </t>
                 <t t-call="account.tax_groups_totals"/>
-                
+
                 <tr class="border-black o_total">
                     <td><strong>Total</strong></td>
                     <td class="text-end">
