--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -32,9 +32,11 @@
                     </td>
                 </tr>
 
-        </t>
+        
+                <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
                 <t t-call="account.tax_groups_totals"/>
-
+        </t>
+        
                 <tr class="border-black o_total">
                     <td><strong>Total</strong></td>
                     <td class="text-end">
