--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -3,177 +3,59 @@
      License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
 <odoo>
     <template id="negative_amounts_credit_note_reports_invoice_document" name="negative.amounts.credit.note.reports.invoice.document" inherit_id="account.document_tax_totals" >
-                     
-         <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="before">
-              <strong>(menos)</strong>
-        </xpath>
 
+        <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="before">
+                <t t-if="o.move_type == 'out_refund' and o.company_id.negative_amounts_credit_note">
+                <strong>(Credit Note)</strong>
+                </t>
+            </xpath>
+                
+            <xpath expr="//t[@t-set='subtotal_to_show']" position="attributes">
+                <attribute name="t-if">False</attribute>
+            </xpath>  
+            
+            <xpath expr="//t[@t-call='account.tax_groups_totals']" position="attributes">
+                <attribute name="t-if">False</attribute>
+            </xpath>  
 
-        <xpath expr="//tr[@class='border-black o_total']/td[@class='text-end']/.." position="attributes">
-            <attribute name="t-if">False</attribute>
-        </xpath>
-
-
-        <xpath expr="//t[@t-set='subtotal_to_show']" position="attributes">
-            <attribute name="t-if">False</attribute>
-        </xpath> 
-
-
-        <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="after">
- 
-        
+            <xpath expr="//tr[@class='border-black o_total']/td[@class='text-end']/.." position="attributes">
+                <attribute name="t-if">False</attribute>
+            </xpath>
+            
+    
+            <xpath expr="//t[@t-call='account.tax_groups_totals']" position="after">
+                <t t-if="o.move_type == 'out_invoice' and o.company_id.negative_amounts_credit_note">
+                <td><strong>Taxas INVOICE</strong></td>
                 <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
                 <t t-call="account.tax_groups_totals"/>
-   
-
+                
                 <tr class="border-black o_total">
                     <td><strong>Total</strong></td>
                     <td class="text-end">
-                        <strong>(menos)</strong>
+                        <strong>(menos Invoice)</strong>
                         <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
                         <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
                     </td>
-                </tr> 
-        </xpath>
-
-   </template>
-</odoo>
-
-<!-- 
-          <xpath expr="//td/span[@t-esc='tax_totals']" position="before">
-          <strong>(menos 6)</strong>
-            </xpath> -->
-
-
-    
-                    <!-- <span t-esc="tax_totals['formatted_amount_total']"
-
-   
-          <tr class="border-black o_total">
-                <td><strong>Total</strong></td>
-    
-                <td class="text-end">
-                    <strong>(-)</strong>
-                    <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
-                  
-                    <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
-                </td>
-            </tr> 
- -->
-
-
-<!-- 
-
-              <xpath expr="/t/t[1]/tr/td[2]/span" position="before">
-          <span>New Text Block</span>
-        </xpath>
-        <xpath expr="/t/t[1]/tr/td[2]/span[1]" position="replace">
-          <span>New Text Block<p>-</p></span>
-        </xpath>
-        <xpath expr="/t/t[1]/tr/td[2]/span[1]" position="replace">
-          <span>-</span>
-        </xpath> -->
-
-        <!-- <t t-extend="i2t_negative_amounts_credit_note_reports.account.document_tax_totals">
-          
-            <xpath expr="//span[@t-esc='tax_totals[&quot;formatted_amount_total&quot;]']" position="after">
-                <strong>(-)</strong>
-            </xpath>
-        </t> -->
-
-            <!-- <xpath expr="//span[contains(@t-esc, 'tax_totals[\'formatted_amount_total\']')]"  position="before">
-                <strong>(menos)</strong>
-            </xpath> -->
-
-   
-        <!-- <xpath expr="//span[@t-esc='tax_totals['formatted_amount_total']']" position="before">
-              <strong>(menos)</strong>
-        </xpath> -->
-
-
-    
-  
-<!-- 
-        <xpath expr="//span[@t-esc='tax_totals['formatted_amount_total_rounded']']" position="before">
-              <strong>(menos)</strong>
-        </xpath> -->
-
-        <!-- <xpath expr="//span[t-esc='tax_totals['formatted_amount_total_rounded']']" position="before">
-              <strong>(menos)</strong>
-        </xpath> -->
-
-<!-- <xpath expr="//span[t-esc='tax_totals['formatted_amount_total_rounded']']" position="after">
-    <!Tu nuevo contenido aquí 
-    <span t-esc="tu_nueva_expresion" t-if="tu_condicion"/>
-</xpath> -->
-
-<!-- 
-        <td class="text-end">
-                    <strong>(-)</strong>
-                    <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
-                  
-                    <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
-                </td>
-
-               <td class="text-end">
-                    <span t-esc="tax_totals['formatted_amount_total']"/>
-                </td> -->
-
-
-
-        <!-- <xpath expr="//span[@t-field='line.price_subtotal']" position="before">
-            <span t-if="negative_symbol">-</span>
-        </xpath> -->
-        <!-- <xpath expr="//span[@t-esc='tax_totals']" position="before">
-            <span t-if="negative_symbol">-</span>
-        </xpath> -->
-
-<!-- 
-
-        <xpath expr="//span[@t-field='o.amount_untaxed']" position="before">
-            <span t-if="negative_symbol">-</span>
-        </xpath>
- -->
-<!-- 
-        <xpath expr="//t[@t-as='payment_vals']/tr[1]/td[2]/span[1]" position="before">
-            <span t-if="negative_symbol">-</span>
-        </xpath> -->
-        <!-- <xpath expr="//span[@t-field='o.amount_total']" position="before">
-            <span t-if="negative_symbol">-</span>
-        </xpath> -->
-        <!-- <xpath expr="//span[@t-field='o.amount_residual']" position="before">
-            <span t-if="negative_symbol">-</span>
-        </xpath> -->
-        <!-- <xpath expr="//span[@t-esc='amount_by_group[3]']" position="before">
-            <span t-if="negative_symbol">-</span>
-        </xpath> -->
-        <!-- <xpath expr="//t[@t-as='amount_by_group']" position="attributes">
-            <attribute name="t-if">not negative_symbol</attribute>
-        </xpath> -->
-
-
-<!--        
-        <xpath expr="//t[@t-as='amount_by_group']" position="before">
-            <t t-foreach="o.amount_by_group" t-as="amount_by_group" t-if="negative_symbol">
-                <tr style="">
-                    <t t-if="len(o.line_ids.filtered(lambda line: line.tax_line_id)) in [0, 1] and float_compare(o.amount_untaxed, amount_by_group[2], precision_rounding=o.currency_id.rounding) == 0">
-                        <td><span class="text-nowrap" t-esc="amount_by_group[0]"/></td>
-                        <td class="text-right o_price_total">
-                            -<span class="text-nowrap" t-esc="amount_by_group[3]"/>
-                        </td>
-                    </t>
-                    <t t-else="">
-                        <td>
-                            <span t-esc="amount_by_group[0]"/>
-                            <span class="text-nowrap"> on
-                                <t t-esc="amount_by_group[4]"/>
-                            </span>
-                        </td>
-                        <td class="text-right o_price_total">
-                            -<span class="text-nowrap" t-esc="amount_by_group[3]"/>
-                        </td>
-                    </t>
                 </tr>
-            </t>
-        </xpath> -->
-
+                </t>
+            </xpath>
+            
+            
+            <xpath expr="//t[@t-call='account.tax_groups_totals']" position="after">
+                <t t-if="o.move_type == 'out_refund' and o.company_id.negative_amounts_credit_note">
+                <td><strong>Taxas RINVOICE</strong></td>
+                <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
+                <t t-call="account.tax_groups_totals"/>
+                
+                <tr class="border-black o_total">
+                    <td><strong>Total</strong></td>
+                    <td class="text-end">
+                        <strong>(menos Credit Note)</strong>
+                        <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
+                        <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
+                    </td>
+                </tr>
+                </t>
+            </xpath>
+            
+</odoo>
