--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -1,61 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright 2022 Ángel García de la Chica Herrera <angel.garcia@sygel.es>
      License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
-<odoo>
+
     <template id="negative_amounts_credit_note_reports_invoice_document" name="negative.amounts.credit.note.reports.invoice.document" inherit_id="account.document_tax_totals" >
 
         <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="before">
-                <t t-if="o.move_type == 'out_refund' and o.company_id.negative_amounts_credit_note">
-                <strong>(Credit Note)</strong>
-                </t>
-            </xpath>
+            <t t-if="o.move_type == 'out_refund' and o.company_id.negative_amounts_credit_note">
+            <strong>(Credit Note)</strong>
+            </t>
+        </xpath>
                 
-            <xpath expr="//t[@t-set='subtotal_to_show']" position="attributes">
-                <attribute name="t-if">False</attribute>
-            </xpath>  
-            
-            <xpath expr="//t[@t-call='account.tax_groups_totals']" position="attributes">
-                <attribute name="t-if">False</attribute>
-            </xpath>  
+        <xpath expr="//t[@t-set='subtotal_to_show']" position="attributes">
+            <attribute name="t-if">False</attribute>
+        </xpath>  
+        
+        <xpath expr="//t[@t-call='account.tax_groups_totals']" position="attributes">
+            <attribute name="t-if">False</attribute>
+        </xpath>  
 
-            <xpath expr="//tr[@class='border-black o_total']/td[@class='text-end']/.." position="attributes">
-                <attribute name="t-if">False</attribute>
-            </xpath>
+        <xpath expr="//tr[@class='border-black o_total']/td[@class='text-end']/.." position="attributes">
+            <attribute name="t-if">False</attribute>
+        </xpath>
             
     
-            <xpath expr="//t[@t-call='account.tax_groups_totals']" position="after">
-                <t t-if="o.move_type == 'out_invoice' and o.company_id.negative_amounts_credit_note">
-                <td><strong>Taxas INVOICE</strong></td>
-                <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
-                <t t-call="account.tax_groups_totals"/>
-                
-                <tr class="border-black o_total">
-                    <td><strong>Total</strong></td>
-                    <td class="text-end">
-                        <strong>(menos Invoice)</strong>
-                        <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
-                        <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
-                    </td>
-                </tr>
-                </t>
-            </xpath>
+        <xpath expr="//t[@t-call='account.tax_groups_totals']" position="after">
+            <t t-if="o.move_type == 'out_invoice' and o.company_id.negative_amounts_credit_note">
+            <td><strong>Taxas INVOICE</strong></td>
+            <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
+            <t t-call="account.tax_groups_totals"/>
             
+            <tr class="border-black o_total">
+                <td><strong>Total</strong></td>
+                <td class="text-end">
+                    <strong>(menos Invoice)</strong>
+                    <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
+                    <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
+                </td>
+            </tr>
+            </t>
+        </xpath>
             
-            <xpath expr="//t[@t-call='account.tax_groups_totals']" position="after">
-                <t t-if="o.move_type == 'out_refund' and o.company_id.negative_amounts_credit_note">
-                <td><strong>Taxas RINVOICE</strong></td>
-                <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
-                <t t-call="account.tax_groups_totals"/>
-                
-                <tr class="border-black o_total">
-                    <td><strong>Total</strong></td>
-                    <td class="text-end">
-                        <strong>(menos Credit Note)</strong>
-                        <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
-                        <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
-                    </td>
-                </tr>
-                </t>
-            </xpath>
+        
+        <xpath expr="//t[@t-call='account.tax_groups_totals']" position="after">
+            <t t-if="o.move_type == 'out_refund' and o.company_id.negative_amounts_credit_note">
+            <td><strong>Taxas RINVOICE</strong></td>
+            <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
+            <t t-call="account.tax_groups_totals"/>
             
-</odoo>
+            <tr class="border-black o_total">
+                <td><strong>Total</strong></td>
+                <td class="text-end">
+                    <strong>(menos Credit Note)</strong>
+                    <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
+                    <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
+                </td>
+            </tr>
+            </t>
+        </xpath>
+
+    </template>        
+
